--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,7 +36,7 @@ dev:
   gemfire:
     counters:
       main:
-        primeRegion: false
+        primeRegion: true
 gemfire:
   locator:
     port: 20334
