--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.4' // Use the appropriate version for your project
+    id 'org.springframework.boot' version '2.7.18' // Use the appropriate version for your project
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'application'
 }
@@ -13,18 +13,22 @@ repositories {
             username "$broadcomUser"
             password "$broadcomPassword"
         }
-        url "https://commercial-repo.pivotal.io/data3/gemfire-release-repo/gemfire"
+        url "https://packages.broadcom.com/artifactory/gemfire"
     }
 }
 
 dependencies {
-    implementation 'io.micrometer:micrometer-core:1.13.4'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-logging'
     implementation 'org.apache.logging.log4j:log4j-core:2.22.1'
     implementation 'org.apache.logging.log4j:log4j-api:2.22.1' // Add log4j-api dependency
     implementation 'com.vmware.gemfire:gemfire-core:10.1.0'
     implementation 'com.vmware.gemfire:gemfire-logging:10.1.0'
+    // Add Spring Boot Actuator for monitoring
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
 }
 
 bootJar {
